--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
-    "vue": "^2.6.14",
+    "vue": "^2.7.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
@@ -19,5 +19,17 @@
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.3"
-  }
+  },
+  "description": "```bash\r # install dependencies\r $ npm install",
+  "main": "nuxt.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sayachua1/vue-app.git"
+  },
+  "author": "sankhya",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/sayachua1/vue-app/issues"
+  },
+  "homepage": "https://github.com/sayachua1/vue-app#readme"
 }
