--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "core-js": "^3.19.3",
+    "eslint": "^8.19.0",
     "nuxt": "^2.15.8",
+    "prettier": "^2.7.1",
     "vue": "^2.7.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
